--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ a {
     justify-content: center;
     object-fit: contain;
 }
-
+.cover {
+    width: 30em;
+}
 /***********************************************************************
  *  Grid Panel
  **********************************************************************/
