--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a {
 }
 .cover {
     width: 20rem;
+    height: 10rem;
 }
 /***********************************************************************
  *  Grid Panel
