--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a {
     object-fit: contain;
 }
 .cover {
-    width: 10rem;
+    width: 50%;
 }
 /***********************************************************************
  *  Grid Panel
