--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ body {
 }
 .box:hover {
     -webkit-transform: rotate(-5deg);
-    -moz-transform:rotate(-5deg);
-    -o-transform:rotate(-5deg);
-    -transform:rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+    transform: rotate(-5deg);
 }
 
 /***********************************************************************
