--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     position: fixed;
     top:0;
     width: 100%;
-    
+}  
 .zone:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
